# c-checkers-api

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: BuildGameTree.c  CMakeLists.txt
src/: CMakeLists.txt  CaptureList.c  CaptureList.h  Checker.h  CheckerTurn.c  CheckerTurn.h  CheckersGame.c  CheckersGame.h  CheckersGameApi.c  CheckersGameApi.h  GameThree.c  GameThree.h  GameTree.c  GameTree.h  Move.c  Move.h  Player.h  main.c
test/: CMakeLists.txt  CheckersApiTest.cpp  CheckersTest.cpp
